[Mac][Material] Add 1pt to the text in the Omnibox dropdown

BUG=608148

Review-Url: https://codereview.chromium.org/1977013003
Cr-Commit-Position: refs/heads/master@{#393666}

Former-commit-id: 523930966431748fbe2bee1ebcb90c882a1db38a